--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,47 +1,38 @@
 @import "../../styles/variables.scss";
 @import "../../styles/responsive.scss";
-
 .home {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: minmax(180px, auto);
-  grid-auto-flow: dense;
-
-  @include xl{
-    grid-template-columns: repeat(3, 1fr);
-  }
-  @include lg{
-    grid-template-columns: repeat(2, 1fr);
-  }
-  @include md {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  @include sm {
-    grid-auto-rows: minmax(120px, auto);
+  .menu-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 20px;
   }
 
-  .box {
-    padding: 20px;
-    border-radius: 10px;
-    border: 2px solid $soft-bg;
+  .menu-item {
+    border: 1px solid blue;
+    padding: 10px;
+    border-radius: 5px;
   }
 
-  .box1 {
-    grid-column: span 1;
-    grid-row: span 3;
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
   }
 
-  .box4 {
-    grid-column: span 1;
-    grid-row: span 3;
+  li {
+    margin-bottom: 5px;
   }
-  .box7 {
-    grid-column: span 2;
-    grid-row: span 2;
 
-    @include md {
-      display: none;
-    }
+  a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+  }
+
+  img {
+    width: 24px;
+    height: 24px;
+    margin-right: 5px;
   }
 }
